Completed major refactor, upgrade to JDK 11
  Moved everything to JDK 11, added some Maven plugins and props
  Logger is more informative now!
    (Well, it's just clickable filenames within log.)
  Fixed a module bug where only one guild gets loaded
  Made guildSettings reactive now
  FileUtil operations now on elastic scheduler